# rlc

./: CMakeLists.txt
data/: manhattan_potential_reward_results.csv  no_potential_reward_results.csv
include/domains/: cliff.h  cliff_walking.h
include/optimisers/: experience_tuple.h  potential_function.h  qlearning.h
scripts/: plot_performance.py
src/: main.c
src/domains/: cliff.c  cliff_walking.c
src/optimisers/: potential_function.c  qlearning.c
